Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Changes to be committed:
	modified:   src/App.css
	modified:   src/App.js
	new file:   src/components/Dialogs/Dialogs.js
	new file:   src/components/Dialogs/Dialogs.module.css
	modified:   src/components/Profile/Profile.js
	modified:   src/components/Profile/Profile.module.css

--- a/01-firstapp/hello/src/App.css
+++ b/01-firstapp/hello/src/App.css
@@ -10,6 +10,11 @@
   grid-template-rows: 70px 4fr;
   grid-template-columns: 1fr 3fr;
   grid-gap: 2px;
+}
 
 
+.app-wrapper-content {
+  grid-area: c;
+  background-color: #C2E4FF;
+  border-radius: 5px;
 }
