Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Changes to be committed:
	modified:   src/components/Navbar/Navbar.js
	modified:   src/components/Navbar/Navbar.module.css

Enabled NavLinks

--- a/01-firstapp/hello/src/components/Navbar/Navbar.module.css
+++ b/01-firstapp/hello/src/components/Navbar/Navbar.module.css
@@ -7,12 +7,15 @@
 }
 
 
-.item {
+.item a{
   color: #585A5B;
   font-weight: bold;
+  text-decoration: none;
 }
 
-/* .item.active {
-  color: rebeccapurple;
+.item a.active {
+  background: aliceblue;
+  border-radius: 4px; 
+  color: #585A5B;
   font-weight: bold;
-} */
+} 
