Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'React-app/master'.

 Changes to be committed:
	modified:   src/App.css
	modified:   src/components/Dialogs/Dialogs.js
	modified:   src/components/Dialogs/Dialogs.module.css
	new file:   src/components/Dialogs/friend.jpg
	modified:   src/components/Profile/MyPosts/MyPosts.module.css
	modified:   src/components/Profile/UserInfo/Avatar.js
	modified:   src/components/Profile/UserInfo/Avatar.module.css
	modified:   src/components/Profile/UserInfo/Description.module.css
	new file:   src/components/Profile/UserInfo/ava.jpg
	deleted:    src/components/Profile/UserInfo/ava.png

Some styles for Dialogs. Refactoring Profile

--- a/01-firstapp/hello/src/components/Profile/UserInfo/Avatar.module.css
+++ b/01-firstapp/hello/src/components/Profile/UserInfo/Avatar.module.css
@@ -1,13 +1,14 @@
 .container {
   width: 110px;
   padding-left: 52px;
-  padding-top: 12px;
+  padding-top: 26px;
+  float: left;
 }
 
 .avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    border: 3px solid #5316E0; 
-    box-shadow: 0 0 7px #666; 
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    border: 2px solid #5316E0; 
+    box-shadow: 0 0 3px #666; 
   } 
