--- a/01-firstapp/hello/src/components/Dialogs/Dialogs.module.css
+++ b/01-firstapp/hello/src/components/Dialogs/Dialogs.module.css
@@ -5,20 +5,58 @@
 
 .dialogsItems {
     padding: 10px;
+    background-color: #D0EAFF;
+    border-radius: 6px;
+
 }
 
 .dialog {
     padding: 10px;
 }
 
-.dialogsItems .active {
-    background: aliceblue;
+.dialog img {
+    
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    border: 2px solid #FFFFFF;
 }
 
-/* .messages {
+.dialogsItems .active {
+    background:  #1956F1;
+    color: aliceblue;
+    font-weight: 600;
+    border-radius: 9px ;
+}
 
+ .messages {
+    padding-top: 14px ;
+    padding-left: 14px;
+    background-color: #E4F3FF;
+    border-radius: 6px;
 }
 
 .message {
+    padding: 10px;
+    margin-bottom: 10px;
+    width: fit-content;
+    background: #1956F1;
+    display: block;
+    color: aliceblue;
+    border-radius: 6px 6px 6px 0px;
+} 
 
-} */
+.answer {
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-right: 14px;
+    width: fit-content;
+    display: block;
+    background-color: #FFFFFF;
+    float: right;
+    border-radius: 6px 6px 0px 6px;
+}
+
+hr {
+    color: #000;
+}
