--- a/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,49 @@
 .posts {
-    float: left;
-    width: 600px;
-    padding-left: 12px;
+    float: right;
+    display: block;
+    position: relative;
+    right: 39px;
+    top: 132px;
+    width: 400px;
+    height: 160px;
+    background-color: #E0F2FF;
+    border-radius: 25px;
+
+}
+
+.button {
+    background-color: #1956F1;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 600;
+    padding: 10px;
+    border: none;
+    border-radius: 25px;
+    position: relative;
+    left: 307px;
+    top: 20px;
+    width: 80px;
+}
+
+
+
+textarea {
+    display: block;
+    position: relative;
+    left: 90px;
+    top: 10px;
+    border-radius: 25px;
+    border: none;
+}
+
+.wrapper img {
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    border: 2px solid #1956F1;
+    box-shadow: 0 0 7px #666;
+    position: relative;
+    top: 147px;
+    left: 70px;
+    z-index: 999;
 }
