--- a/01-firstapp/hello/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/01-firstapp/hello/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,15 +1,15 @@
-
 .item {
   font-weight: 500;
   color: #585A5B;
   padding-left: 12px;
-}   
+}
 
 
 .item img {
+  position: static;
   width: 30px;
   height: 30px;
   border-radius: 100px;
-  border: 2px solid #5316E0; 
-  box-shadow: 0 0 7px #666; 
-} 
+  border: 2px solid #1956F1;
+  box-shadow: 0 0 7px #666;
+}
