--- a/01-firstapp/hello/src/components/Profile/UserInfo/Avatar.module.css
+++ b/01-firstapp/hello/src/components/Profile/UserInfo/Avatar.module.css
@@ -1,14 +1,17 @@
 .container {
-  width: 110px;
-  padding-left: 52px;
-  padding-top: 26px;
   float: left;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  padding-left: 122px;
+  top: 249px;
 }
 
 .avatar {
-    width: 200px;
-    height: 200px;
-    border-radius: 20px;
-    border: 2px solid #5316E0; 
-    box-shadow: 0 0 3px #666; 
-  } 
+  width: 200px;
+  height: 200px;
+  border: 2px solid #1956F1;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
