--- a/01-firstapp/hello/src/components/Navbar/Navbar.module.css
+++ b/01-firstapp/hello/src/components/Navbar/Navbar.module.css
@@ -4,6 +4,7 @@
   border-radius: 5px;
   text-align: center;
   padding-top: 12px;
+  padding-bottom: 10px;
   height: 1000px;
 }
 
@@ -12,11 +13,24 @@
   color: #585A5B;
   font-weight: bold;
   text-decoration: none;
+  padding: 20px;
 }
 
 .item a.active {
   background: aliceblue;
+  padding: 2px;
   border-radius: 4px; 
   color: #585A5B;
   font-weight: bold;
 } 
+
+.container {
+  background: #E0F2FF;
+  width: 182px;
+  height: 150px;
+  margin-top: 20px;
+  margin-left: 57px;
+  padding-top: 36px;
+  border-radius: 25px;
+}
+
