new file:   src/components/Friends/Brian.jpg 	modified:   src/components/Friends/Friends.js 	modified:   src/components/Friends/Friends.module.css 	new file:   src/components/Friends/Peter.jpeg 	new file:   src/components/Friends/Quagmire.jpg 	modified:   src/components/Navbar/Navbar.module.css
Продолжаю хардкодить френдлист, нужно придумать как передавать изображения в массиве

--- a/01-firstapp/hello/src/components/Navbar/Navbar.module.css
+++ b/01-firstapp/hello/src/components/Navbar/Navbar.module.css
@@ -17,7 +17,7 @@
 }
 
 .item a.active {
-  background: aliceblue;
+  background: #fff;
   padding: 2px;
   border-radius: 4px; 
   color: #585A5B;
@@ -26,10 +26,10 @@
 
 .container {
   background: #E0F2FF;
-  width: 182px;
+  width: 282px;
   height: 150px;
   margin-top: 20px;
-  margin-left: 57px;
+  margin-left: 7px;
   padding-top: 36px;
   border-radius: 25px;
 }
