--- a/01-firstapp/hello/src/components/Friends/Friends.module.css
+++ b/01-firstapp/hello/src/components/Friends/Friends.module.css
@@ -13,4 +13,19 @@
     font-weight: 700;
     font-size: 18px;
     color: #585A5B;
+    padding-bottom: 15px;
+  }
+
+  .friend {
+    display: inline;
+    padding-right: 17px;
+    padding-top: 7px;
+  }
+
+  .friend img {
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    border: 2px solid #FFFFFF;
   }
