--- a/01-firstapp/hello/src/components/Navbar/Navbar.module.css
+++ b/01-firstapp/hello/src/components/Navbar/Navbar.module.css
@@ -12,8 +12,9 @@
 .item a{
   color: #585A5B;
   font-weight: bold;
+  font-size: 18px;
   text-decoration: none;
-  padding: 20px;
+  
 }
 
 .item a.active {
