modified:   src/components/Profile/MyPosts/MyPosts.js 	modified:   src/components/Profile/MyPosts/MyPosts.module.css
добавил заголовок к постам

--- a/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
@@ -47,3 +47,10 @@ textarea {
     left: 70px;
     z-index: 999;
 }
+
+.postsHeader {
+    font-size: 32px;
+    font-weight: 600;
+    color: #3B3C3D;
+    padding-left: 130px;
+}
