Вынес френдлист в state

--- a/01-firstapp/hello/src/components/Navbar/Friends/Friends.module.css
+++ b/01-firstapp/hello/src/components/Navbar/Friends/Friends.module.css
@@ -2,7 +2,7 @@
     
     background: #E0F2FF;
     width: 282px;
-    height: 150px;
+    height: fit-content;
     margin-top: 20px;
     margin-left: 7px;
     padding-top: 36px;
