modified:   src/components/Dialogs/Dialogs.js 	modified:   src/components/Dialogs/Dialogs.module.css 	modified:   src/components/Profile/MyPosts/MyPosts.js 	modified:   src/components/Profile/MyPosts/MyPosts.module.css
добавил тектэреа в диалоги, поправил стили для текстовых областей. Нужно отрефачить стили для диалогов.

--- a/01-firstapp/hello/src/components/Dialogs/Dialogs.module.css
+++ b/01-firstapp/hello/src/components/Dialogs/Dialogs.module.css
@@ -1,12 +1,14 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 2fr 10fr 10fr;
+    grid-template-rows: auto;
 }
 
 .dialogsItems {
     padding: 10px;
     background-color: #D0EAFF;
     border-radius: 6px;
+    width: 200px;
 
 }
 
@@ -61,3 +63,14 @@
 hr {
     color: #000;
 }
+
+/* .answerContainer {
+    float: right;
+} */
+
+.answerEnterArea {
+  
+    border-radius: 25px;
+    border: none;
+}
+
