--- a/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/01-firstapp/hello/src/components/Profile/MyPosts/MyPosts.module.css
@@ -27,12 +27,12 @@
 
 
 
-textarea {
+.newPostEnter {
     display: block;
     position: relative;
     left: 90px;
     top: 10px;
-    border-radius: 25px;
+    border-radius: 15px;
     border: none;
 }
 
